# SoftTest

./: .gitignore  README.md
Comission/: CMakeCache.txt  CMakeLists.txt  Comission.cpp  Comission.h  Makefile  cmake_install.cmake  main.cpp  runTests
NextDate/: CMakeCache.txt  CMakeLists.txt  Makefile  NextDate.cpp  NextDate.h  cmake_install.cmake  main.cpp  runTests
triangle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  runTests  triangle.cpp  triangle.h
